Add hibernate and postgres configuration, add proper dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 ## By default, spring will look at the /src/main/webapp folder to look for the resources
 spring.mvc.view.prefix= /WEB-INF/views/
 spring.mvc.view.suffix= .jsp
+
+## Database ##
+db.driver =  org.postgresql.Driver
+db.url =  jdbc:postgresql://localhost:5432/blog
+db.username = postgres
+db.password = 123456
+
+## Hibernate ##
+hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
+hibernate.show_sql = true
+hibernate.format_sql = true
+entitymanager.packagesToScan= com.szostok.domain
+hibernate.enable_lazy_load_no_trans = true
