--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,14 @@
             <version>9.4-1201-jdbc4</version>
         </dependency>
 
-    </dependencies>
+		<!-- jsoup HTML parser  -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.9.2</version>
+		</dependency>
+
+	</dependencies>
 	
 	<build>
 		<plugins>
