--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,15 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+		<!-- Spring security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+        </dependency>
 		<!-- Tomcat JSP dependency -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
