--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ db.password = 123456
 hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
 hibernate.show_sql = true
 hibernate.format_sql = true
-entitymanager.packagesToScan= com.szostok.domain
+entitymanager.packagesToScan= com.mszostok.domain
 hibernate.enable_lazy_load_no_trans = true
