Add szie upload limit exception handler, add max files size properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ hibernate.show_sql = true
 hibernate.format_sql = true
 entitymanager.packagesToScan= com.mszostok.domain
 hibernate.enable_lazy_load_no_trans = true
+
+## Upload file
+multipart.maxFileSize: 512KB
+multipart.maxRequestSize: 512KB
